test/Fail/Issue952-unnamed.err
Issue952-unnamed.agda:12.11-13: error: [WrongNamedArgument]
Function does not accept argument {A = _}
when checking that {A = X} is a valid argument to a function of
type {_ = A : Set} → A → A
